--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">DropByDroneApp</string>
+    <string name="headline">DropByDrone</string>
+    <string name="button_send">Send</string>
+    <string name="button_scan">Scan</string>
+    <string name="button_accept">Accept</string>
+    <string name="button_receive">Receive</string>
+    <string name="text_infoID">ID</string>
+    <string name="text_infoText">Text</string>
+    <string name="text_infoInfo">Info</string>
+    <string name="text_infoINFO">Info</string>
 </resources>
