--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="text_infoText">Text</string>
     <string name="text_infoInfo">Info</string>
     <string name="text_infoINFO">Info</string>
+    <string name="button_cancel">Cancel</string>
 </resources>
